Bug fix: Make height 100% for main activity list component to ensure background covers all list items

--- a/client/client/src/Components/MainActivityList/MainActivityList.scss
+++ b/client/client/src/Components/MainActivityList/MainActivityList.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/placeholders" as *;
 
 .main-activities {
-    height: 60vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: $background-secondary;
